# auth-server

./: .gitignore  auth-server.cabal  default.nix  shell.nix
app/: API.hs  GenerateToken.hs  Main.hs  Settings.hs  Store.hs  Util.hs
