cabal-version:      2.4
name:               auth-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Hill
maintainer:         daniel@gluo.nz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable auth-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: API, Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base
                  , servant
                  , servant-server
                  , cryptonite
                  , bytestring
                  , memory
                  , wai
                  , wai-extra
                  , warp
                  , http-api-data
                  , stm
                  , transformers
                  , containers
                  , mtl
                  , aeson
                  , text
    hs-source-dirs:   app
    default-language: Haskell2010

executable generate-token
    main-is: GenerateToken.hs
    other-modules: Util
    build-depends:   base
                   , cryptonite
                   , bytestring
                   , memory
                   , aeson
                   , text
    hs-source-dirs:   app
    default-language: Haskell2010
